// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Command Component - Core Functional Tests matches snapshot for basic command with input and list 1`] = `
<div
  class="bg-popover text-popover-foreground flex h-full w-full flex-col overflow-hidden rounded-md"
  cmdk-root=""
  tabindex="-1"
>
  <label
    cmdk-label=""
    for="radix-«r1s»"
    id="radix-«r1r»"
    style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
  />
  <div
    class="flex items-center px-3"
    cmdk-input-wrapper=""
  >
    <input
      aria-autocomplete="list"
      aria-controls="radix-«r1q»"
      aria-expanded="true"
      aria-labelledby="radix-«r1r»"
      autocomplete="off"
      autocorrect="off"
      class="placeholder:text-muted-foreground flex h-10 w-full rounded-md bg-transparent py-3 text-sm outline-hidden disabled:cursor-not-allowed disabled:opacity-50"
      cmdk-input=""
      id="radix-«r1s»"
      placeholder="Snapshot..."
      role="combobox"
      spellcheck="false"
      type="text"
      value=""
    />
  </div>
  <div
    aria-label="Suggestions"
    class="max-h-[300px] overflow-x-hidden overflow-y-auto"
    cmdk-list=""
    id="radix-«r1q»"
    role="listbox"
    tabindex="-1"
  >
    <div
      cmdk-list-sizer=""
    >
      <div
        aria-disabled="false"
        aria-selected="true"
        class="data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground relative flex cursor-pointer items-center gap-2 rounded-sm px-2 py-1.5 text-sm outline-hidden select-none data-[disabled=true]:pointer-events-none data-[disabled=true]:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0"
        cmdk-item=""
        data-disabled="false"
        data-selected="true"
        data-value="Snap 1"
        id="radix-«r1t»"
        role="option"
      >
        Snap 1
      </div>
      <div
        aria-disabled="false"
        aria-selected="false"
        class="data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground relative flex cursor-pointer items-center gap-2 rounded-sm px-2 py-1.5 text-sm outline-hidden select-none data-[disabled=true]:pointer-events-none data-[disabled=true]:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0"
        cmdk-item=""
        data-disabled="false"
        data-selected="false"
        data-value="Snap 2"
        id="radix-«r1u»"
        role="option"
      >
        Snap 2
      </div>
    </div>
  </div>
</div>
`;

exports[`Command Component - Core Functional Tests matches snapshot for command dialog 1`] = `null`;

exports[`Command Component - Core Functional Tests matches snapshot for command item with shortcut 1`] = `
<div
  class="bg-popover text-popover-foreground flex h-full w-full flex-col overflow-hidden rounded-md"
  cmdk-root=""
  tabindex="-1"
>
  <label
    cmdk-label=""
    for="radix-«r2f»"
    id="radix-«r2e»"
    style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
  />
  <div
    aria-label="Suggestions"
    class="max-h-[300px] overflow-x-hidden overflow-y-auto"
    cmdk-list=""
    id="radix-«r2d»"
    role="listbox"
    tabindex="-1"
  >
    <div
      cmdk-list-sizer=""
    >
      <div
        aria-disabled="false"
        aria-selected="true"
        class="data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground relative flex cursor-pointer items-center gap-2 rounded-sm px-2 py-1.5 text-sm outline-hidden select-none data-[disabled=true]:pointer-events-none data-[disabled=true]:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0"
        cmdk-item=""
        data-disabled="false"
        data-selected="true"
        data-value="New File⌘N"
        id="radix-«r2g»"
        role="option"
      >
        New File
        <span
          class="text-muted-foreground ml-auto text-xs tracking-widest"
        >
          ⌘N
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Command Component - Core Functional Tests matches snapshot for command with empty state 1`] = `
<div
  class="bg-popover text-popover-foreground flex h-full w-full flex-col overflow-hidden rounded-md"
  cmdk-root=""
  tabindex="-1"
>
  <label
    cmdk-label=""
    for="radix-«r2m»"
    id="radix-«r2l»"
    style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
  />
  <div
    class="py-6 text-center text-sm"
    cmdk-empty=""
    role="presentation"
  >
    No results found
  </div>
</div>
`;

exports[`Command Component - Core Functional Tests matches snapshot for command with groups and separators 1`] = `
<div
  class="bg-popover text-popover-foreground flex h-full w-full flex-col overflow-hidden rounded-md"
  cmdk-root=""
  tabindex="-1"
>
  <label
    cmdk-label=""
    for="radix-«r28»"
    id="radix-«r27»"
    style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
  />
  <div
    aria-label="Suggestions"
    class="max-h-[300px] overflow-x-hidden overflow-y-auto"
    cmdk-list=""
    id="radix-«r26»"
    role="listbox"
    tabindex="-1"
  >
    <div
      cmdk-list-sizer=""
    >
      <div
        class="text-foreground [&_[cmdk-group-heading]]:text-muted-foreground overflow-hidden p-1 [&_[cmdk-group-heading]]:px-2 [&_[cmdk-group-heading]]:py-1.5 [&_[cmdk-group-heading]]:text-xs [&_[cmdk-group-heading]]:font-medium"
        cmdk-group=""
        data-value="Group"
        role="presentation"
      >
        <div
          aria-hidden="true"
          cmdk-group-heading=""
          id="radix-«r2a»"
        >
          Group
        </div>
        <div
          aria-labelledby="radix-«r2a»"
          cmdk-group-items=""
          role="group"
        >
          <div
            aria-disabled="false"
            aria-selected="true"
            class="data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground relative flex cursor-pointer items-center gap-2 rounded-sm px-2 py-1.5 text-sm outline-hidden select-none data-[disabled=true]:pointer-events-none data-[disabled=true]:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0"
            cmdk-item=""
            data-disabled="false"
            data-selected="true"
            data-value="Item 1"
            id="radix-«r2b»"
            role="option"
          >
            Item 1
          </div>
        </div>
      </div>
      <div
        class="bg-border -mx-1 h-px"
        cmdk-separator=""
        role="separator"
      />
      <div
        aria-disabled="false"
        aria-selected="false"
        class="data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground relative flex cursor-pointer items-center gap-2 rounded-sm px-2 py-1.5 text-sm outline-hidden select-none data-[disabled=true]:pointer-events-none data-[disabled=true]:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0"
        cmdk-item=""
        data-disabled="false"
        data-selected="false"
        data-value="Item 2"
        id="radix-«r2c»"
        role="option"
      >
        Item 2
      </div>
    </div>
  </div>
</div>
`;

exports[`Command Component - Core Functional Tests matches snapshot for command with loading state 1`] = `
<div
  class="bg-popover text-popover-foreground flex h-full w-full flex-col overflow-hidden rounded-md"
  cmdk-root=""
  tabindex="-1"
>
  <label
    cmdk-label=""
    for="radix-«r2j»"
    id="radix-«r2i»"
    style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
  />
  <div
    aria-label="Suggestions"
    class="max-h-[300px] overflow-x-hidden overflow-y-auto"
    cmdk-list=""
    id="radix-«r2h»"
    role="listbox"
    tabindex="-1"
  >
    <div
      cmdk-list-sizer=""
    >
      <div
        aria-label="Loading..."
        aria-valuemax="100"
        aria-valuemin="0"
        cmdk-loading=""
        role="progressbar"
      >
        <div
          aria-hidden="true"
        >
          Loading...
        </div>
      </div>
    </div>
  </div>
</div>
`;
